# de-datalake-dataload-prefect

./: .dockerignore  .env.example  .gitignore  .prefectignore  CHANGELOG.md  Dockerfile  README.md  TODO.md  docs.md  getPersonPersisted.py  prefect.yaml  prefect_deployment_plan.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: build-and-push.yml  docker-publish.yaml
DAGSTER/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
DAGSTER/src/PersonDataLoad/: definitions.py
DAGSTER/src/PersonDataLoad/defs/: assets.py  resources.py
config/: __init__.py  person_queries.toml  resources.py  settings.py
deployments/: course_raw_deployment.py  person_raw_deployment.py  term_raw_deployment.py
flows/: __init__.py  course_raw_flow.py  person_raw_flow.py  term_raw_flow.py
flows/course/: course_flow.py  course_tasks.py
flows/person/: person_flow.py  person_tasks.py
flows/term/: term_flow.py  term_tasks.py
flows/utils/: batch.py  db.py  logging_helpers.py
k8s/: secrets-template.yaml
sql/: course.sql  person.sql  term.sql
tasks/: __init__.py
tests/: conftest.py  test_smoke.py
