[project]
name = "PersonDataLoad"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "prefect>=2.14.0",
    "httpx==0.27.0",
    "asyncpg>=0.27.0",
    "anyio>=3.6.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "prefect-client",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

