[project]
name = "PersonDataLoad"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.12",
    "dagster-postgres==0.27.12",
    "sqlalchemy==2.0.43",
    "httpx==0.27.0",
    "psycopg[binary,pool]==3.2.9",
    "asyncpg>=0.27.0",
    "anyio>=3.6.2",
    "aioodbc>=0.3.0",
    "deepdiff>=6.7.1",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "PersonDataLoad"
registry_modules = [
    "PersonDataLoad.components.*",
]


